--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -828,12 +828,289 @@
 
     </div>
 
+    <div class="blankHXS"></div>
 
 
+    <!-- Arrow -->
+    <%- include('shared/comp_textualElements_arrow', {message: 'Timeline' }) %>
+    <!-- Arrow -->
 
+    <div class="blankHXXS"></div>
+
+
+    <div class="wrapper">
+      <div class="Grid Grid--full Grid--gutters u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <h1 class="TextPoppins fontWeight100 Grey800"> Experience Design
+
+            </h1>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="page timeline-5-2" data-uia-timeline-skin="5">
+      <div class="uia-timeline">
+        <div class="uia-timeline__container">
+          <div class="uia-timeline__line"></div>
+          <div class="uia-timeline__groups">
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">User Experience Designer</h3>
+                    <h6 class="TextPoppins textItalic">2021 – 2024</h6>
+                    <h6 class="TextPoppins textItalic">Full-time @ BookYourPet</h6>
+                    <h4>SaaS Booking Web App</h4>
+                    <h4>Consumer Booking Mobile App</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Product Designer</h3>
+                    <h6 class="TextPoppins textItalic">2023 – 2024</h6>
+                    <h6 class="TextPoppins textItalic">Part-time @ LASO Health</h6>
+                    <h4>Selling Prescription Medications</h4>
+                    <h4>Marketing Web Page Research</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">UX Designer</h3>
+                    <h6 class="TextPoppins textItalic">2023</h6>
+                    <h6 class="TextPoppins textItalic">Part-time @ Modernized Mobile LLC</h6>
+                    <h4>Tablet-based Admin Panel for the 'Clean Spaces' app</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="blankHXS"></div>
+
+
+    <div class="wrapper">
+      <div class="Grid Grid--full Grid--gutters u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <h1 class="TextPoppins fontWeight100 Grey800"> Web Design & Implementation
+
+            </h1>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="page timeline-5-2" data-uia-timeline-skin="5">
+      <div class="uia-timeline">
+        <div class="uia-timeline__container">
+          <div class="uia-timeline__line"></div>
+          <div class="uia-timeline__groups">
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Web Design</h3>
+                    <h4>Responsive Web Design</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Design System</h3>
+                    <h4>Design & Maintenance
+                    </h4>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Deployed on AWS S3</h3>
+                    <h4>Implementation & Update</h4>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="blankHXS"></div>
 
+
+    <div class="wrapper">
+      <div class="Grid Grid--full Grid--gutters u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <h1 class="TextPoppins fontWeight100 Grey800"> Architectural Design
+            </h1>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="page timeline-5-2" data-uia-timeline-skin="5">
+      <div class="uia-timeline">
+        <div class="uia-timeline__container">
+          <div class="uia-timeline__line"></div>
+          <div class="uia-timeline__groups">
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Architectural Designer</h3>
+                    <h6 class="TextPoppins textItalic">2017 &#8211; 2018</h6>
+                    <h6 class="TextPoppins textItalic">Full-time &#64; Buro OS </h6>
+                    <h4>Concept & Visual Design</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Design Intern</h3>
+                    <h6 class="TextPoppins textItalic">2017</h6>
+                    <h6 class="TextPoppins textItalic">Full-time @ In Design Studio </h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Architectural Designer
+                    </h3>
+                    <h6 class="TextPoppins textItalic">2013 &#8211; 2015</h6>
+                    <h6 class="TextPoppins textItalic">Full-time @ PDI Design Group</h6>
+                    <h4>Schematic Design
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Architectural Designer
+                    </h3>
+                    <h6 class="TextPoppins textItalic">2010 &#8211; 2012</h6>
+                    <h6 class="TextPoppins textItalic">Part-time @ Do Union</h6>
+                    <h4>Concept & Visualization
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="blankHXS"></div>
+    <div class="wrapper">
+      <div class="Grid Grid--full Grid--gutters u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <h1 class="TextPoppins fontWeight100 Grey800"> Education & Leisure Activities
+            </h1>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="page timeline-5-2" data-uia-timeline-skin="5">
+      <div class="uia-timeline">
+        <div class="uia-timeline__container">
+          <div class="uia-timeline__line"></div>
+          <div class="uia-timeline__groups">
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">UC Berkeley</h3>
+                    <h6 class="TextPoppins textItalic">2015 &#8211; 2019, Full-time</h6>
+                    <h4>Master of architecture</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Beijing Uni. of Tech </h3>
+                    <h6 class="TextPoppins textItalic">2009 - 2013, Full-time</h6>
+                    <h4>Art & Design</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Nature & Wildlife Photography
+                    </h3>
+                    <h6 class="TextPoppins textItalic">2017 - Present, Part-time</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Drawing & Painting
+
+                    </h3>
+                    <h6 class="TextPoppins textItalic">From childhood through college.
+                    </h6>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Arrow -->
     <%- include('shared/comp_textualElements_arrow', {message: 'Skills & Experiences' }) %>
