--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -842,9 +842,9 @@
       <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
           <div class="element">
-            <h1 class="TextPoppins fontWeight100 Grey800"> Experience Design
+            <h1 class="TextPoppins fontWeight100 Grey800"> Experience Design </h1>
+            <h5 class="TextPoppins textItalic fontWeight100">2021 - Present</h5>
 
-            </h1>
           </div>
         </div>
       </div>
@@ -862,8 +862,15 @@
                     <h3 class="page__job-name fontWeight400">User Experience Designer</h3>
                     <h6 class="TextPoppins textItalic">2021 – 2024</h6>
                     <h6 class="TextPoppins textItalic">Full-time @ BookYourPet</h6>
-                    <h4>SaaS Booking Web App</h4>
-                    <h4>Consumer Booking Mobile App</h4>
+                    <h4 class="fontWeight400 colorYellowVW700">SaaS Booking Web Application </h4>
+                    <ul>
+                      <li>&#9675; Pet Service Booking System </li>
+                      <li>&#9675; Pet Service Operations Management </li>
+                    </ul>
+                    <h4 class="fontWeight400 colorYellowVW700">Consumer Booking Mobile App</h4>
+                    <ul>
+                      <li>&#9675; Pet Service Booking & Payment </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -876,8 +883,12 @@
                     <h3 class="page__job-name fontWeight400">Product Designer</h3>
                     <h6 class="TextPoppins textItalic">2023 – 2024</h6>
                     <h6 class="TextPoppins textItalic">Part-time @ LASO Health</h6>
-                    <h4>Selling Prescription Medications</h4>
-                    <h4>Marketing Web Page Research</h4>
+                    <h4 class="fontWeight400 colorYellowVW700">Selling Prescription Medications</h4>
+                    <ul>
+                      <li>&#9675; Marketing Web Page Research</li>
+                      <li>&#9675; Super Admin Panel for User Management</li>
+                    </ul>
+
                   </div>
                 </div>
               </div>
@@ -890,7 +901,10 @@
                     <h3 class="page__job-name fontWeight400">UX Designer</h3>
                     <h6 class="TextPoppins textItalic">2023</h6>
                     <h6 class="TextPoppins textItalic">Part-time @ Modernized Mobile LLC</h6>
-                    <h4>Tablet-based Admin Panel for the 'Clean Spaces' app</h4>
+                    <h4 class="fontWeight400 colorYellowVW700">Clean Spaces App</h4>
+                    <ul>
+                      <li>&#9675; Tablet-based Admin Panel</li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -906,9 +920,8 @@
       <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
           <div class="element">
-            <h1 class="TextPoppins fontWeight100 Grey800"> Web Design & Implementation
-
-            </h1>
+            <h1 class="TextPoppins fontWeight100 Grey800"> Web Design & Implementation </h1>
+            <h5 class="TextPoppins textItalic fontWeight100">2020 - Present</h5>
           </div>
         </div>
       </div>
@@ -925,6 +938,7 @@
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Web Design</h3>
                     <h4>Responsive Web Design</h4>
+
                   </div>
                 </div>
               </div>
@@ -934,9 +948,8 @@
               <div class="uia-timeline__point uia-card">
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
-                    <h3 class="page__job-name fontWeight400">Design System</h3>
-                    <h4>Design & Update
-                    </h4>
+                    <h3 class="page__job-name fontWeight400"><a href="/design_system/" class="textUnderline">Design System</a> </h3>
+                    <h4>Reusable & Scalable Components</h4>
 
                   </div>
                 </div>
@@ -948,7 +961,9 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Deployed on AWS S3</h3>
-                    <h4>Implementation & Maintenance </h4>
+                    <h4>Build from Scratch </h4>
+                    <h4><a href="https://github.com/vicky-wyq" class="textUnderline">By Using HTML, CSS, JavaScript, EJS </a> </h4>
+
 
                   </div>
                 </div>
@@ -968,6 +983,8 @@
           <div class="element">
             <h1 class="TextPoppins fontWeight100 Grey800"> Architectural Design
             </h1>
+            <h5 class="TextPoppins textItalic fontWeight100">2010 - 2018</h5>
+
           </div>
         </div>
       </div>
@@ -1022,7 +1039,7 @@
               <div class="uia-timeline__point uia-card">
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
-                    <h3 class="page__job-name fontWeight400">Architectural Designer
+                    <h3 class="page__job-name fontWeight400">Design Intern
                     </h3>
                     <h6 class="TextPoppins textItalic">2010 &#8211; 2012</h6>
                     <h6 class="TextPoppins textItalic">Part-time @ Do Union</h6>
@@ -1043,12 +1060,14 @@
       <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
           <div class="element">
-            <h1 class="TextPoppins fontWeight100 Grey800"> Education & Leisure Activities
+            <h1 class="TextPoppins fontWeight100 Grey800"> Education & Professional Development
             </h1>
+            2009 - Present
           </div>
         </div>
       </div>
     </div>
+
     <div class="page timeline-5-2" data-uia-timeline-skin="5">
       <div class="uia-timeline">
         <div class="uia-timeline__container">
@@ -1059,10 +1078,57 @@
               <div class="uia-timeline__point uia-card">
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Udemy</h3>
+                    <h6 class="TextPoppins textItalic">2024, Online Class</h6>
+                    <ul>
+                      <li>○ The Complete JavaScript Course: From Zero to Expert
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Codecademy</h3>
+                    <h6 class="TextPoppins textItalic">2022 &#8211; 2023, Online Class</h6>
+                    <ul>
+                      <li>○ Learn User Research: Generative </li>
+                      <li>○ Learn Design Thinking: Ideation </li>
+                      <li>○ Learn Interaction Design </li>
+                      <li>○ Learn Introduction to UI and UX Design</li>
+                      <li>○ Learn Responsive Design </li>
+                      <li>○ Learn Navigation Design </li>
+                      <li>○ Learn JavaScript </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Google UX Design Professional Certificate
+                    </h3>
+                    <h6 class="TextPoppins textItalic">2021, Online Class</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">UC Berkeley</h3>
                     <h6 class="TextPoppins textItalic">2015 &#8211; 2019, Full-time</h6>
                     <h4><a href="/architecture" class="textUnderline">Master of Architecture</a> </h4>
-                    
                   </div>
                 </div>
               </div>
@@ -1080,14 +1146,43 @@
               </div>
             </div>
 
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="blankHXS"></div>
+    <div class="wrapper">
+      <div class="Grid Grid--full Grid--gutters u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <h1 class="TextPoppins fontWeight100 Grey800"> Leisure Activities
+            </h1>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="page timeline-5-2" data-uia-timeline-skin="5">
+      <div class="uia-timeline">
+        <div class="uia-timeline__container">
+          <div class="uia-timeline__line"></div>
+          <div class="uia-timeline__groups">
+
+
+
             <div class="uia-timeline__group">
               <div class="uia-timeline__dot"></div>
               <div class="uia-timeline__point uia-card">
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
-                    <h3 class="page__job-name fontWeight400">Nature & Wildlife Photography
-                    </h3>
+                    <h3 class="page__job-name fontWeight400"><a href="/photography" class="textUnderline">Photography</a> </h3>
+
                     <h6 class="TextPoppins textItalic">2017 - Present, Part-time</h6>
+                    <h4>Nature & Wildlife</h4>
+
                   </div>
                 </div>
               </div>
