--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -191,7 +191,7 @@
 
               <div class="paddingXL borderRadiusL gradient_background2">
                 <a href="/byp_b2b_subscription/">
-                  <img src="/projectImages/Cover_b2b_subscription.svg" alt="Business Booking Experience"></a>
+                  <img src="/projectImages/Cover_b2b_subscription.gif" alt="Business Booking Experience"></a>
               </div>
             </div>
           </div>
@@ -1080,11 +1080,10 @@
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Udemy</h3>
                     <h6 class="TextPoppins textItalic">2024, Online Class</h6>
-                    <ul>
-                      <li>○ The Complete JavaScript Course: From Zero to Expert
-                      </li>
+                    <h4>The Complete <a href="/javascript-learning/" class="textUnderline">JavaScript Course</a>: </h4>
+                    <h4>From Zero to Expert </h4>
 
-                    </ul>
+         
                   </div>
                 </div>
               </div>
