--- a/templates/admin_panel/index.ejs
+++ b/templates/admin_panel/index.ejs
@@ -424,7 +424,7 @@ pageURL:'admin_panel/', thumbnailImgURL: 'vickywang_web.png'
 
 
         </div>
-        <div class="TBcarouselNav Grid-cell">
+        <div class="TBcarouselNav Grid-cell flipBtn">
           <a class="TBsliderNav active" aria-label="Go to slide 1">
             <div>User Management</div>
           </a>
