--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -205,29 +205,27 @@
                 colorTxt: 'color_VW_Pink800'
               }) %>
               <div class="blankHTiny"></div>
-              <h1 class="specialTextM fontWeight700">Onboarding & Subscription
+              <h1 class="specialTextM fontWeight700">Optimizing SaaS Subscription Growth
               </h1>
+              <div class="blankHTiny"></div>
+              <div class="blankHTiny"></div>
 
-              <h3 class="colorLandingText fontWeight700">Streamline onboarding process and driving subscription growth
-
-
-              </h3>
               <ul>
 
-                <li class="listCircle">Reduced Onboarding Time 30% decrease in the average time required to complete onboarding.
+                <li class="listCircle"> <span class="TextPoppins fontWeight500">Streamlined Onboarding:</span> Enhanced the onboarding process to drive subscription growth.
+                </li>
+                <li class="listCircle"> <span class="TextPoppins fontWeight500">Reduced Onboarding Time:</span> Achieved a 30% decrease in average onboarding duration.
+                </li>
+                <li class="listCircle"> <span class="TextPoppins fontWeight500">Improved Decision-Making:</span> Noted a 25% increase in user satisfaction regarding clarity and guidance during onboarding.
+
+                </li>
+                <li class="listCircle"> <span class="TextPoppins fontWeight500">Higher Completion Rates:</span> Realized a 40% rise in onboarding completion rates.
+                </li>
+                <li class="listCircle"> <span class="TextPoppins fontWeight500">Boosted Subscription Conversions:</span> Experienced a 20% growth in conversion rates from trial to paid subscriptions.
+                </li>
 
 
-                </li>
 
-                <li class="listCircle">
-                  Improved Decision-Making: 25% increase in user satisfaction with onboarding clarity and guidance.
-                </li>
-                <li class="listCircle">
-                  Higher Completion Rates: 40% rise in onboarding completion rates.
-                </li>
-                <li class="listCircle">
-                  Boosted Subscription Conversions: 20% growth in conversion rates from trial to paid subscriptions.
-                </li>
 
 
               </ul>
@@ -1062,7 +1060,7 @@
           <div class="element">
             <h1 class="TextPoppins fontWeight100 Grey800"> Education & Professional Development
             </h1>
-            
+
             <h5 class="TextPoppins textItalic fontWeight200">2009 - Present</h5>
           </div>
         </div>
@@ -1084,7 +1082,7 @@
                     <h6>The Complete <a href="/javascript-learning/" class="textUnderline">JavaScript Course</a> </h6>
                     <h6>From Zero to Expert </h6>
 
-         
+
                   </div>
                 </div>
               </div>
