--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -935,7 +935,7 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Web Design</h3>
-                    <h4>Responsive Web Design</h4>
+                    <h5>Responsive Web Design</h5>
 
                   </div>
                 </div>
@@ -947,7 +947,7 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400"><a href="/design_system/" class="textUnderline">Design System</a> </h3>
-                    <h4>Reusable & Scalable Components</h4>
+                    <h5>Reusable & Scalable Components</h5>
 
                   </div>
                 </div>
@@ -959,9 +959,8 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Deployed on AWS S3</h3>
-                    <h4>Build from Scratch </h4>
-                    <h4><a href="https://github.com/vicky-wyq" class="textUnderline">By Using HTML, CSS, JavaScript, EJS </a> </h4>
-
+                    <h5>Build from Scratch </h5>
+                    <h5><a href="https://github.com/vicky-wyq" class="textUnderline">HTML, CSS, JavaScript, EJS </a> </h5>
 
                   </div>
                 </div>
