--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -141,7 +141,7 @@
 
       <div class="wrapper">
 
-        <div class="Grid Grid--gutters Grid--holly-grail Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -185,7 +185,7 @@
           </div>
         </div>
         <div class="blankHS"></div>
-        <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -254,7 +254,7 @@
         </div>
 
         <div class="blankHXXS"></div>
-        <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -318,7 +318,7 @@
       </div>
       <div class="blankHXXS"></div>
       <div class="wrapper">
-        <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -380,7 +380,7 @@
       <div class="blankHXXS"></div>
       <div class="wrapper">
 
-        <div class="Grid Grid--gutters Grid--holly-grail Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -423,7 +423,7 @@
           </div>
         </div>
         <div class="blankHS"></div>
-        <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -487,7 +487,7 @@
       <div class="blankHXXS"></div>
       <div class="wrapper">
 
-        <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -590,7 +590,7 @@
 
       <div class="blankHXXS"></div>
       <div class="wrapper">
-        <div class="Grid Grid--gutters Grid--holly-grail Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
