--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -179,7 +179,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_booking"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
+              <a href="/byp_b2b_booking"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -232,7 +232,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_subscription/"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
+              <a href="/byp_b2b_subscription/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -295,7 +295,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_booking"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
+              <a href="/byp_b2b_booking"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -355,7 +355,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_SaaS/"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
+              <a href="/byp_b2b_SaaS/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -417,7 +417,7 @@
 
             </div>
             <div class="element">
-              <a href="/savings_calculator/"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
+              <a href="/savings_calculator/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -463,7 +463,7 @@
 
             </div>
             <div class="element">
-              <a href="/refining_rx_zero/"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
+              <a href="/refining_rx_zero/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -527,7 +527,7 @@
 
             </div>
             <div class="element">
-              <a href="/admin_panel/"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
+              <a href="/admin_panel/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -628,7 +628,7 @@
 
             </div>
             <div class="element">
-              <a href="/design_system/"> <button class="buttonSmall buttonPrimary bgVWGrey">View design system
+              <a href="/design_system/"> <button class="buttonMedium buttonPrimary bgVWGrey">View design system
                 </button></a>
             </div>
           </div>
@@ -728,7 +728,7 @@
           <div class="row centerVer">
             <div class="element">
 
-              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonSmall buttonPrimary bgVWGrey">Email me
+              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonMedium buttonPrimary bgVWGrey">Email me
                 </button></a>
 
             </div>
