--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Scalable Design System Design and Implementation by Vicky Wang', 
 description:`A comprehensive system that enhances the scalability and consistency of UX design. It serves as a practical guide for designing scalable, efficient, and cohesive user interfaces and experiences. `, 
@@ -332,19 +332,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
             </div>
           </div>
 
-          <%- include(`${templatePath}/shared/block_copyCode`, {
-            wrapperGrid: true, 
-            copyCodeName:'neutralShades', 
-            copyCodeT1:`neutralShadesT1`, 
-            copyCodeT2:`neutralShadesT2`, 
-            copyCodeT3:`neutralShadesT3`,
-            t1Checked:``,          
-            t2Checked:``,
-            t3Checked:`checked`,
-            EJS: ejsLiterals.ejs.style_neutralShades,
-            HTML: ejsLiterals.html.style_neutralShades,
-            CSS: ejsLiterals.css.style_neutralShades,
-          }) %>
+
 
 
 
