--- a/html/main.css
+++ b/html/main.css
@@ -2072,13 +2072,14 @@ ul .rightPanel {
 ul {
     list-style-type: none;
     font-family: inherit;
-    font-size: clamp(0.9em, 1.1vw, 1.3em);
-    /* Adjusted to match paragraph font size */
+    font-size: clamp(0.98em, 1.18vw, 1.3em);
+
+    /* font size =h5 */
     font-weight: 300;
     list-style-position: outside;
     margin-left: 0;
     padding-left: 20px;
-    line-height: 1.6em;
+    line-height: clamp(1.76em, 1.8vw, 1.2em);
 }
 
 ul .listCircle {
@@ -2265,12 +2266,12 @@ h4 {
 }
 
 h5 {
-    font-size: clamp(0.9em, 1.1vw, 1.3em);
+    font-size: clamp(0.98em, 1.18vw, 1.3em);
     /* Adjusted for clarity */
 }
 
 h6 {
-    font-size: clamp(0.78em, 1vw, 1.1em);
+    font-size: clamp(0.86em, 1.05vw, 1.2em);
 
 }
 
