--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -547,38 +547,96 @@
     <div class="blankHXXS"></div>
 
     <div class="wrapper">
+      <div class="Grid Grid--gutters Grid--cols-3">
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder GLORIFY paddingNone marginXS">
+          <a class="no-hover-effect" href="/glorify/">
+            <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
+            <div class="element">
+              <div class="blankHTiny"></div>
 
-      <div class="Grid Grid--gutters Grid--cols-2">
-        <%- include(`${templatePath}/shared/block_cardNoPassword`, {
-          hoverBorderColor:`GLORIFY`,
-          cardNoPwURL:`${websitePath}/glorify/`,
-          cardNoPwImgURL:`${websitePath}/projectImages/Cover_Glorify.png`,
-          cardNoPwTitle: `Glorify: Transforming Solitary Devotion into Community Engagement`, 
-          cardNoPwDescription:`This case study explores the evolution of the Glorify app, a mobile platform dedicated to enhancing individual spiritual journeys, into a vibrant community hub for collective faith building.` 
-          }) %>
-        <%- include(`${templatePath}/shared/block_cardNoPassword`, {
-      hoverBorderColor:`SEER`,
-      cardNoPwURL:`${websitePath}/seer/`,
-      cardNoPwImgURL:`${websitePath}/projectImages/Cover_SEER.png`,
-      cardNoPwTitle: `SEER: Enhancing Brand Impact on Reddit`, 
-      cardNoPwDescription:`A conceptual UX case study aimed at transforming Reddit data into actionable
-            insights for brand marketers. This design explores the potential of intuitive
-            analytics to understand user sentiment and engagement, offering a glimpse into the
-            future of targeted marketing strategies.` 
-      }) %>
-        <%- include(`${templatePath}/shared/block_cardNoPassword`, {
-      hoverBorderColor:`APPOINTA`,
-      cardNoPwURL:`${websitePath}/appointa/`,
-      cardNoPwImgURL:`${websitePath}/projectImages/Cover_APPOINTA.png`,
-      cardNoPwTitle: `APPOINTA: Interview Scheduling Made Simple`, 
-      cardNoPwDescription:`Explore my UX case study aimed at revamping interview scheduling. This project
-              streamlines the recruiter's tasks, speeds up hiring, and enhances scheduling
-              experiences, reducing interview coordination time and boosting recruitment efficiency.` 
-      }) %>
+              <%- include(`${templatePath}/shared/base_chip`, {
+                chipSmallTxt: '1-2 Experiment',
+                colorBg: 'colorBg_VW_Pink200',
+                colorTxt: 'color_VW_Pink800'
+              }) %>
+              <h3 class="TextPoppins fontWeight500">Glorify App</h3>
+              <h3 class="colorLandingText fontWeight700"> For Christian daily worship
+
+              </h3>
+              <ul>
+                <li class="listCircle"> <span class="TextPoppins fontWeight400">Initiate Community:</span> Transform from a single-player to a multiplayer experience.
+                </li>
+                <li class="listCircle"> <span class="TextPoppins fontWeight400">Drive Growth:</span> Foster engagement and expand user participation within the community.
+
+                </li>
+              </ul>
+            </div>
+          </a>
+        </div>
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder SEER paddingNone marginXS">
+          <a class="no-hover-effect" href="/seer/">
+            <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
+            <div class="element">
+              <div class="blankHTiny"></div>
+
+              <%- include(`${templatePath}/shared/base_chip`, {
+                chipSmallTxt: '0-1 Experiment',
+                colorBg: 'colorBg_VW_Pink200',
+                colorTxt: 'color_VW_Pink800'
+              }) %>
+              <h3 class="arrCard"><strong>Marketing Insights Dashboard</strong></h3>
+
+              <h3 class="colorLandingText fontWeight700"> For Brand marketers
+
+              </h3>
+              <ul>
+                <li class="listCircle"> <span class="TextPoppins fontWeight400">Transform Insights:</span> Turn Reddit data into actionable insights for brand marketers.
+                </li>
+                <li class="listCircle"> <span class="TextPoppins fontWeight400">Drive Growth:</span> Utilize intuitive analytics to understand user sentiment and engagement.
+                </li>
+                <li class="listCircle"> <span class="TextPoppins fontWeight400">Future Vision: </span> Gain a glimpse into the future of targeted marketing strategies.
+                </li>
+              </ul>
+         
+
+
+            </div>
+          </a>
+        </div>
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder APPOINTA paddingNone marginXS">
+          <a class="no-hover-effect" href="/appointa/">
+            <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
+            <div class="element">
+              <div class="blankHTiny"></div>
+
+              <%- include(`${templatePath}/shared/base_chip`, {
+                chipSmallTxt: '0-1 Experiment',
+                colorBg: 'colorBg_VW_Pink200',
+                colorTxt: 'color_VW_Pink800'
+              }) %>
+              <h3 class="arrCard"><strong>Interview Scheduling</strong></h3>
+              <h3 class="colorLandingText fontWeight700"> For Recuriter & hiring managers
+
+              </h3>
+              <ul>
+                <li class="listCircle"> <span class="TextPoppins fontWeight400">Streamline Scheduling:</span> Revamp the interview scheduling process to enhance efficiency.
+                </li>
+                <li class="listCircle"> <span class="TextPoppins fontWeight400">Reduce Coordination Time:</span> Speed up hiring by minimizing the time spent on scheduling interviews.
+                </li>
+                <li class="listCircle"> <span class="TextPoppins fontWeight400">Boost Recruitment Efficiency: </span> Improve the overall candidate experience through better coordination.
+                </li>
+              </ul>
+
+
+            </div>
+          </a>
+        </div>
       </div>
       <div class="blankHXS"></div>
 
     </div>
+    <div class="blankHXS"></div>
+
   </section>
   <section id="design_system">
     <div class="colorBgWhie pattern2">
