--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -900,11 +900,11 @@
           <div class="element">
             <h1 class="TextPoppins fontWeight100 Grey800"> Experience Design </h1>
             <h5 class="TextPoppins textItalic fontWeight200">2021 - Present</h5>
-
           </div>
         </div>
       </div>
     </div>
+    
     <div class="page timeline-5-2" data-uia-timeline-skin="5">
       <div class="uia-timeline">
         <div class="uia-timeline__container">
@@ -915,15 +915,35 @@
               <div class="uia-timeline__point uia-card">
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
+                    <h3 class="page__job-name fontWeight400">Senior UX Designer</h3>
+                    <h6 class="TextPoppins textItalic">2024 – Present</h6>
+                    <h6 class="TextPoppins textItalic">Full-time &#64; BabyQuip </h6>
+                    <h4 class="fontWeight400 colorYellowVW700">Baby Gear Rental </h4>
+                    <ul>
+                      <li>&#9675; Marketplace </li>
+                    </ul>
+     
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="uia-timeline__group">
+              <div class="uia-timeline__dot"></div>
+              <div class="uia-timeline__point uia-card">
+                <div class="uia-card__container">
+                  <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">User Experience Designer</h3>
                     <h6 class="TextPoppins textItalic">2021 – 2024</h6>
-                    <h6 class="TextPoppins textItalic">Full-time @ BookYourPet</h6>
-                    <h4 class="fontWeight400 colorYellowVW700">SaaS Booking Web Application </h4>
+                    <h6 class="TextPoppins textItalic">Full-time &#64; BookYourPet</h6>
+  
+                    <h4 class="fontWeight400 colorYellowVW700">Business SaaS Booking App</h4>
                     <ul>
-                      <li>&#9675; Pet Service Booking System </li>
-                      <li>&#9675; Pet Service Operations Management </li>
+                      <li>&#9675; Pet service booking system
+                      </li>
+                      <li>&#9675; Operations management tool </li>
                     </ul>
-                    <h4 class="fontWeight400 colorYellowVW700">Consumer Booking Mobile App</h4>
+
+                    <h4 class="fontWeight400 colorYellowVW700">Consumer Booking Mobile App </h4>
                     <ul>
                       <li>&#9675; Pet Service Booking & Payment </li>
                     </ul>
@@ -938,7 +958,7 @@
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Product Designer</h3>
                     <h6 class="TextPoppins textItalic">2023 – 2024</h6>
-                    <h6 class="TextPoppins textItalic">Part-time @ LASO Health</h6>
+                    <h6 class="TextPoppins textItalic">Part-time &#64; LASO Health</h6>
                     <h4 class="fontWeight400 colorYellowVW700">Selling Prescription Medications</h4>
                     <ul>
                       <li>&#9675; Marketing Web Page Research</li>
@@ -956,7 +976,7 @@
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">UX Designer</h3>
                     <h6 class="TextPoppins textItalic">2023</h6>
-                    <h6 class="TextPoppins textItalic">Part-time @ Modernized Mobile LLC</h6>
+                    <h6 class="TextPoppins textItalic">Part-time &#64; Modernized Mobile LLC</h6>
                     <h4 class="fontWeight400 colorYellowVW700">Clean Spaces App</h4>
                     <ul>
                       <li>&#9675; Tablet-based Admin Panel</li>
@@ -1069,7 +1089,7 @@
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Design Intern</h3>
                     <h6 class="TextPoppins textItalic">2017</h6>
-                    <h6 class="TextPoppins textItalic fontWeight400">Full-time @ In Design Studio </h6>
+                    <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; In Design Studio </h6>
                   </div>
                 </div>
               </div>
@@ -1082,7 +1102,7 @@
                     <h3 class="page__job-name fontWeight400">Architectural Designer
                     </h3>
                     <h6 class="TextPoppins textItalic">2013 &#8211; 2015</h6>
-                    <h6 class="TextPoppins textItalic fontWeight400">Full-time @ <a href="http://www.pdidg.com/" class="textUnderline"> PDI Design Group </a> </h6>
+                    <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; <a href="http://www.pdidg.com/" class="textUnderline"> PDI Design Group </a> </h6>
                     <h6>Schematic Design
                     </h6>
                   </div>
@@ -1097,7 +1117,7 @@
                     <h3 class="page__job-name fontWeight400">Design Intern
                     </h3>
                     <h6 class="TextPoppins textItalic">2010 &#8211; 2012</h6>
-                    <h6 class="TextPoppins textItalic fontWeight400">Part-time @ <a href="http://chengdapeng.art/" class="textUnderline"> Do Union </a></h6>
+                    <h6 class="TextPoppins textItalic fontWeight400">Part-time &#64; <a href="http://chengdapeng.art/" class="textUnderline"> Do Union </a></h6>
                     <h6>Concept & Visualization
                     </h6>
                   </div>
@@ -1181,7 +1201,7 @@
               <div class="uia-timeline__point uia-card">
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
-                    <h3 class="page__job-name fontWeight400"><a href="https://www.berkeley.edu/" class="textUnderline">UC Berkeley</a> &#160; <a href="https://ced.berkeley.edu/" class="textUnderline">CED</a></h3>
+                    <h3 class="page__job-name fontWeight400"><a href="https://www.berkeley.edu/" class="textUnderline">UC Berkeley</a> &#160;, <a href="https://ced.berkeley.edu/" class="textUnderline">CED</a></h3>
                     <h6 class="TextPoppins textItalic fontWeight400">2015 &#8211; 2017, Full-time</h6>
                     <h6 class="TextPoppins textItalic fontWeight400">2017 &#8211; 2019, Full-time</h6>
                     <h6><a href="/architecture" class="textUnderline">Master of Architecture</a> </h6>
