--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -19,7 +19,7 @@
     <div class="Grid Grid--gutters Grid--full u-textCenter positionFixed">
       <div class="Grid-cell">
         <div class="element ">
-          <a href="/resume/resume.pdf" target="_blank"> <button class="buttonLarge buttonFlip bgVWGrey">PDF Resume
+          <a href="/resume/resume.pdf" target="_blank"> <button class="buttonSmall buttonPrimary bgVWGrey">PDF Resume
             </button></a>
           <!--buttonBlack-->
 
@@ -182,9 +182,24 @@
             <h3><strong class="colorYellowVW700"> EXPERIENCE</strong></h3>
 
 
+            <h5><strong>BabyQuip | Senior User Experience Designer </strong></h5>
+            <h6 class="textItalic">Oct. 2024 - Present, Full-time</h6>
+
+            <div class="blankHTiny"></div>
+
+            <ul>
+              <li class="listCircle">Conducted usability tests on multiple platforms.</li>
+              <div class="blankHTiny"></div>
+            </ul>
+          </div>
+          <div class="element">
+            <h3><strong class="colorYellowVW700"> EXPERIENCE</strong></h3>
+
+
             <h5><strong>BookYourPet | User Experience Designer </strong></h5>
+
+            <h6 class="textItalic">Feb. 2024 - Oct. 2024, Full-time</h6>
             <h6 class="textItalic">Oct. 2021 - Feb. 2024, Full-time Contractor</h6>
-            <h6 class="textItalic">Feb. 2024 - Present, Full-time</h6>
 
             <div class="blankHTiny"></div>
 
